Added new site to portfolio

--- a/sites.html
+++ b/sites.html
@@ -57,6 +57,7 @@
                 <a href="https://github.com/XDobson"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
+
     </div>
 
     <h1 id="title">All of the Projects I have worked on</h1>
@@ -71,45 +72,61 @@
                         alt="image"></a>
                 <div id="textbox">
                     <p>
+                        [TITLE] <br> <br>
                         [ABOUT 20 WORDS]
                     </p>
                 </div>
             </div> -->
 
         <!-- Sunny Sips -->
-        <div id="showoff">
-            <a href="https://sunny-sips.vercel.app">
-                <img class="showcase" src="images/sunnySipsThumbnail.jpg" alt="image">
-            </a>
-            <div id="textbox">
-                <p>
-                    A website for selling cups decorated with custom cut vinyl stickers, complete with contact info
-                    and an in-site form for quickly contacting the seller.
-                </p>
+            <h1>"Sunny Sips"</h1>
+            <div id="showoff">
+                <a href="https://sunny-sips.vercel.app">
+                    <img class="showcase" src="images/sunnySipsThumbnail.jpg" alt="image">
+                </a>
+                <div id="textbox">
+                    <p>
+                        Sunny Sips <br> <br>
+                        A website for selling cups decorated with custom cut vinyl stickers, complete with contact info
+                        and an in-site form for quickly contacting the seller.
+                    </p>
+                </div>
             </div>
-        </div>
-        <!-- Cassie's Cotton Candy Company -->
-        <div id="showoff">
-            <a href="https://xdobsonlandingpage.vercel.app"><img class="showcase" src="images/CCCCThumbnail.jpg"alt="image"></a>
-            <div id="textbox">
-                <p>
-                    An early project to showcase some simple features for websites such as clickable icons and
-                    buttons / hover mechanics.
-                </p>
+            <!-- Cassie's Cotton Candy Company -->
+            <div id="showoff">
+                <a href="https://xdobsonlandingpage.vercel.app"><img class="showcase" src="images/CCCCThumbnail.jpg"
+                        alt="image"></a>
+                <div id="textbox">
+                    <p>
+                        Cassie's Cotton Candy Company <br> <br>
+                        An early project to showcase some simple features for websites such as clickable icons and
+                        buttons / hover mechanics.
+                    </p>
+                </div>
             </div>
-        </div>
-        <!-- Wiggle Website -->
-        <div id="showoff">
-            <a href="https://wigglewigglewiggle.vercel.app"><img class="showcase" src="images/WiggleThumbnail.jpg"alt="image"></a>
-            <div id="textbox">
-                <p>
-                    A simple website made to practice using functions, and having Javascript interact with a webpage.
-                </p>
+            <!-- Wiggle Website -->
+            <div id="showoff">
+                <a href="https://wigglewigglewiggle.vercel.app"><img class="showcase" src="images/WiggleThumbnail.jpg"
+                        alt="image"></a>
+                <div id="textbox">
+                    <p>
+                        Wiggle Wiggle Wiggle <br> <br>
+                        A simple website made to practice using functions, and having Javascript interact with a
+                        webpage.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div style="height: 10%; width: 100%;">
-
-        </div>
+            <div id="showoff">
+                <a href="https://rainbowbarf.vercel.app"><img class="showcase" src="images/RainbowBarfthumbnail.jpg"
+                        alt="image"></a>
+                <div id="textbox">
+                    <p>
+                        Rainbow Barf <br> <br>
+                        A simple website that has a few buttons that alter the background color in various ways. Made as
+                        an exercise in Javascript.
+                    </p>
+                </div>
+            </div>
     </section>
 
 </body>
