--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Clear Cups With Custom Vinyl Stickers">
 
     <!-- Tab Icon -->
-    <link rel="shortcut icon" type="image" href="birchSquare.png" />
+    <link rel="shortcut icon" type="image" href="images/birchSquare.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
